@@ -1,3 +1,12 @@
+2011-11-11  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        [Qt] Remove dead MeeGoTouch code.
+
+        Reviewed by Tor Arne Vestbø.
+
+        * WebProcess/qt/WebProcessMainQt.cpp:
+        (WebKit::WebProcessMainQt):
+
 2011-11-11  Alexis Menard  <alexis.menard@openbossa.org>
 
         [Qt] Add a way to have experimental features in WebKit2
